Fix layout issues

--- a/SingularityUI/app/styles/detailHeader.styl
+++ b/SingularityUI/app/styles/detailHeader.styl
@@ -29,6 +29,9 @@
             margin-bottom 5px
             margin-left 5px
 
+    .row
+      margin-bottom 0
+
     .lead
         font-size 16px
         color #666
@@ -128,8 +131,6 @@
         display inline-block
         font-size 0.5em
         vertical-align middle
-    .task-state-header
-        padding-top 5px
     .breadcrumb
         margin-bottom 5px
         padding 5px 15px
